--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	<link rel="stylesheet" type="text/css" href="estilos.css">
 
 	<ul class="menu"><center>
-	<li><a href="">FELICITACIONES</a></li>
-		<li><a href="">SUGERENCIAS</a></li>
-	<li><a href="">COVID-19</a></li>
-<li><a href="">INICIO</a></li>
+	<li><a href="https://orlandoisaacml.github.io/m/">FELICITACIONES</a></li>
+		<li><a href="https://orlandoisaacml.github.io/actividadd/">SUGERENCIAS</a></li>
+	<li><a href="https://orlandoisaacml.github.io/ccoiv/">COVID-19</a></li>
+	<li><a href="https://orlandoisaacml.github.io/inicio/">INICIO</a></li>
 </center>
 </ul>
 <h3><center><font color ="red"face="Arial Black" size="7" >SUGERENCIAS</font></h3></center>
